[gd_scene load_steps=3 format=2]

[ext_resource path="res://res/fonts/LargFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/map/NewObjectPopup.gd" type="Script" id=2]

[node name="NewObjectPopup" type="PanelContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -600.0
margin_top = -300.0
margin_right = 600.0
margin_bottom = 300.0
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 12.0
margin_top = 12.0
margin_right = 1188.0
margin_bottom = 588.0
custom_constants/margin_right = 24
custom_constants/margin_top = 24
custom_constants/margin_left = 24
custom_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 24.0
margin_top = 24.0
margin_right = 1152.0
margin_bottom = 552.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 1128.0
margin_bottom = 85.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 1 )
text = "New x named:"

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer"]
margin_top = 147.0
margin_right = 1128.0
margin_bottom = 252.0
size_flags_vertical = 6
custom_fonts/font = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 419.0
margin_right = 1128.0
margin_bottom = 528.0
size_flags_vertical = 10
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 1116.0
margin_bottom = 97.0
size_flags_vertical = 3
custom_constants/separation = 300
alignment = 1

[node name="CancelButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
margin_right = 402.0
margin_bottom = 85.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "Cancel"

[node name="AddButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 702.0
margin_right = 1104.0
margin_bottom = 85.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "Add"

[connection signal="text_changed" from="MarginContainer/VBoxContainer/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/AddButton" to="." method="_on_AddButton_pressed"]
